--- a/0x00-html_advanced/18-index.html
+++ b/0x00-html_advanced/18-index.html
@@ -9,19 +9,27 @@
         <link rel="icon" type="image/png" href="./favicon.png"/>
     </head>
     <body>
+        <br/>
+        <!-- Header -->
         <header>
             <div>
-                <span>Techium</span>
+                <div>
+                <a href="/"><span>Techium</span></a>
+                </div>
                 <nav></nav>
             </div>
         </header>
+        <br/>
+        <!-- Main -->
         <main>
             <h1>Homepage</h1>
+            <!-- Hero section -->
             <section>
                 <div>
                     <h2>We help you build your brand!</h2>
                 </div>
             </section>
+            <!-- Services section -->
             <section>
                 <div>
                     <header>
@@ -38,6 +46,7 @@
                     </div>
                 </div>
             </section>
+            <!-- Works section -->
             <section>
                 <div>
                     <header>
@@ -55,6 +64,7 @@
                     </article>
                 </div>
             </section>
+            <!-- About Us section -->
             <section>
                 <div>
                     <header>
@@ -71,6 +81,7 @@
                     </div>
                 </div>
             </section>
+            <!-- Latest news section -->
             <section>
                 <div>
                     <header>
@@ -95,6 +106,7 @@
                     </div>
                 </div>
             </section>
+            <!-- Testimonials section -->
             <section>
                 <div>
                     <header>
@@ -108,6 +120,7 @@
                     </div>
                 </div>
             </section>
+            <!-- Contact section -->
             <section>
                 <div>
                     <header>
@@ -120,6 +133,8 @@
                 </div>
             </section>
         </main>
+        <br/>
+        <!-- Footer -->
         <footer>
             <div>
                 Footer
