--- a/0x00-html_advanced/17-index.html
+++ b/0x00-html_advanced/17-index.html
@@ -9,19 +9,25 @@
         <link rel="icon" type="image/png" href="./favicon.png"/>
     </head>
     <body>
+        <br/>
+        <!-- Header -->
         <header>
             <div>
                 <span>Techium</span>
                 <nav></nav>
             </div>
         </header>
+        <br/>
+        <!-- Main -->
         <main>
             <h1>Homepage</h1>
+            <!-- Hero section -->
             <section>
                 <div>
                     <h2>We help you build your brand!</h2>
                 </div>
             </section>
+            <!-- Services section -->
             <section>
                 <div>
                     <header>
@@ -38,6 +44,7 @@
                     </div>
                 </div>
             </section>
+            <!-- Works section -->
             <section>
                 <div>
                     <header>
@@ -55,6 +62,7 @@
                     </article>
                 </div>
             </section>
+            <!-- About Us section -->
             <section>
                 <div>
                     <header>
@@ -71,6 +79,7 @@
                     </div>
                 </div>
             </section>
+            <!-- Latest news section -->
             <section>
                 <div>
                     <header>
@@ -95,6 +104,7 @@
                     </div>
                 </div>
             </section>
+            <!-- Testimonials section -->
             <section>
                 <div>
                     <header>
@@ -108,6 +118,7 @@
                     </div>
                 </div>
             </section>
+            <!-- Contact section -->
             <section>
                 <div>
                     <header>
@@ -120,6 +131,8 @@
                 </div>
             </section>
         </main>
+        <br/>
+        <!-- Footer -->
         <footer>
             <div>
                 Footer
